# AutoLatex2

./: .gitignore  Dockerfile  MODULE4_SUMMARY.md  OCR_API_使用说明.md  OCR_API_启动说明.md  README.md  app.py  execution_log.txt  execution_log_compile_change6.txt  frontend_page.py  ocr_api.py  ocr_model_wrapper.py  output_log.txt  pyproject.toml  reinitialize_database.py  report.md  req.ini  requirements.txt  run_api.py  run_ui.py  start_services.py  test_knowledge_base.py  update_knowledge_base.py
Agent输出/: draft.aux  draft.fdb_latexmk  draft.fls  draft.tex  final_report.md  output_new.txt
BIThesis-graduate-thesis-template-3.8.3/1-BIThesis-论文模板-3.8.3/: bithesis.cls
checkpoints/mixtex_lora_10k_final_tuned/: last_checkpoint.txt  training_history.json  training_state.json
data/IEEE_TimePerceptBench_Full_Paper/: IEEE_TimePerceptBench_Full_Paper.docx
data/ex1/: ex1_parsed.json
data/templates/: README.md  aaai.tex  acm_sigconf.tex  chinese_journal.tex  cvpr.tex  icml.tex  ieee_conference.tex  neurips.tex
data/uploads/: sample_paper_full.docx  sample_paper_full_parsed.json
data/vector_db/: chroma.sqlite3
docs/: WEB_UI_GUIDE.md
docs/实现文档（任务完成进度情况）/: README_MODULE4.md
docs/搭建指南/: API_PROTOCOL.md
evaluation_results/: evaluation_results.csv  evaluation_results.json
output/: draft.fdb_latexmk  draft.fls  draft.tex  final_report.md  generation_log.md
scripts/: eval_model_comparison.py  find_dataset_cache.py  find_model_cache.py  finetune_mixtex_qlora.py  inspect_mixtex_modules.py
static/js/: script.js
templates/: index.html
test_data/: generate_docx_samples.py
(+82 files in other folders)
