[project]
name = "autolatex"
version = "0.1.0"
description = "autolatex using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools>=1.5.0",
    "crewai[tools]==1.5.0",
    "litellm>=1.80.0",
]

[project.scripts]
autolatex = "autolatex.main:run"
run_crew = "autolatex.main:run"
train = "autolatex.main:train"
replay = "autolatex.main:replay"
test = "autolatex.main:test"
run_with_trigger = "autolatex.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
